--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ build/
 /PicoRom-Flex/CAD/PicoRom-Flex/History
 /PicoRom-Flex/CAD/__Previews
 /PicoRom-Flex/CAD/History
+/PicoRom-Flex/CAD/Project Logs for PicoRom-Flex
