--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ build/
 /PicoRom-Flex/CAD/__Previews
 /PicoRom-Flex/CAD/History
 /PicoRom-Flex/CAD/Project Logs for PicoRom-Flex
+/PicoRom-Flex/CAD/Project Outputs for PicoRom-Flex
